Getting pac4j v6 compiling